--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
 		<title>Webpack-App</title>
 	</head>
 	<body>
-		<script src="../dist/main.js"></script>
+		<h1>Webpacp App</h1>
+
+		<ul>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+			<li><a href=""></a></li>
+		</ul>
+		<!-- 
+fgfhdfg
+     -->
+		<script src="../dist/bundle.js"></script>
 	</body>
 </html>
