--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Webpack-App</title>
+		<link rel="stylesheet" href="../dist/index.css" />
 	</head>
 	<body>
 		<h1>Webpacp App</h1>
 
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href=""></a>Home</li>
+			<li><a href=""></a>About Us</li>
+			<li><a href=""></a>Product</li>
+			<li><a href=""></a>Blog</li>
+			<li><a href=""></a>Contact</li>
 		</ul>
 		<!-- 
 fgfhdfg
