--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1>Webpacp App</h1>
 
-		<ul>
+		<ul class="nav">
 			<li><a href=""></a>Home</li>
 			<li><a href=""></a>About Us</li>
 			<li><a href=""></a>Product</li>
